# dns-rr

./: Cargo.toml  Dockerfile
.github/workflows/: deploy-image.yml
src/: args.rs  handler.rs  main.rs  server.rs
src/handler/: requests.rs
