[package]
name = "dns-rr"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
rpath = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-dns = "0.10.1"
timedmap = { version = "1.0.2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
